Fix green color on hover over buttons & alignment in few pages(#200)

--- a/src/app/components/challenge/challengeviewallsubmissions/challengeviewallsubmissions.component.scss
+++ b/src/app/components/challenge/challengeviewallsubmissions/challengeviewallsubmissions.component.scss
@@ -7,6 +7,11 @@
   }
 }
 
+.filter-team {
+  margin-top: 40px;
+  padding-left: 27px;
+}
+
 .show-submission-count {
   background: #252833;
   text-align: center;
