--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -230,6 +230,11 @@ mat-label {
   .mat-form-field-infix {
     width: 478px !important;
   }
+
+  .input-group .input-field {
+    padding: 0px !important;
+    margin-top: 0px !important;
+  }
 }
 
 .mat-select-trigger {
@@ -545,6 +550,11 @@ ul {
 }
 
 .submit-upload-file {
+  .file-path-wrapper {
+    input {
+      color: black !important;
+    }
+  }
   .input-group .file-field .btn {
     border-radius: 2px !important;
     background: $dark-gray !important;
@@ -1235,6 +1245,11 @@ code {
   }
 }
 
+.btn:hover {
+  cursor: pointer;
+  background-color: $dark-gray !important;
+}
+
 .btn:disabled {
   background-color: #DFDFDF !important;
   box-shadow: none;
@@ -1252,7 +1267,7 @@ code {
   0px,
   $overlay-light);
   &:hover {
-    background: $gray-light;
+    background: $gray-light !important;
     border: 1px solid $gray-light;
     color: black;
     @include box-shadow(0px,
@@ -1304,7 +1319,7 @@ code {
     0px,
     $overlay-light);
     border: 1.5px solid $gray-light;
-    background: $gray-light;
+    background: $gray-light !important;
     color: black;
   }
 }
@@ -1319,7 +1334,7 @@ code {
     box-shadow: 0px 4px 8px transparent;
     &:hover {
         box-shadow: 0px 0px 8px #9d9d9d;
-        background: $med-gray;
+        background: $med-gray !important;
         color: #fff;
     }
   }
@@ -1399,8 +1414,9 @@ code {
     border-radius: 2px;
     background: white;
     position: fixed;
-    top: 50%;
+    top: 55%;
     left: 50%;
+    max-height: 585px !important;
     z-index: 999;
     transform: translate(-50%, -50%);
     font-size: $fs-16;
@@ -1411,7 +1427,6 @@ code {
       padding: 10px;
       font-size: $fs-18;
       font-weight: $fw-bolder;
-      margin-bottom: 30px;
     }
     .content {
       padding: 10px;
@@ -1423,6 +1438,13 @@ code {
       padding: 10px;
       text-align: right;
     }
+  }
+}
+
+.modal-inputs {
+  .input-group .input-field {
+    padding: 0px !important;
+    margin-top: 0px !important;
   }
 }
 
@@ -1690,6 +1712,7 @@ html {
 }
 
 a {
+  cursor: pointer;
   color: $med-gray;
 }
 
